# framework

./: CHANGELOG.md  CMakeLists.txt  README.md  run
.github/: FUNDING.yml
api/: api.h  types.h
config/: build.config  build.settings  locales.sjson  options.cmake  shared.cmake
docs/: README.md  expressions.md
docs/manual/: README.md
docs/manual/en/: README.md
docs/manual/fr/: README.md
framework/: CMakeLists.txt  about.cpp  app.cpp  app.h  app.impl.inl  boot.cpp  common.cpp  database.h  dispatcher.cpp  dispatcher.h  expr.cpp  expr.h  glfw.cpp  imgui.cpp  localization.cpp  plugin.cpp  plugin.h  search_query.cpp  string.cpp  string.h  string_template.inl.h  table.cpp  window.cpp
framework/tests/: dispatcher_tests.cpp  expr_tests.cpp
plugins/api/: api.h
plugins/test1/: CMakeLists.txt  test1.cpp
sources/: CMakeLists.txt  events.h  example.cpp  settings.cpp  settings.h  version.h
sources/tests/: example_tests.cpp
tools/installer/: CMakeLists.txt
